# Embodied-Vision-Toolkit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  ruff.toml
.github/workflows/: ci.yml
01_Calibration_and_Stereo/: baseline_eigen.cpp  double_sphere_undistort.cpp  fisheye_undistort.cpp  stereo_pointcloud.cpp
02_Visuo_Tactile_Perception/: fft_poisson_integration.py  multigrid_poisson_integration.py  photometric_stereo.py
03_Data_Doctor_for_SLAM/: 3dgs_data_pipeline.py  data_doctor.py
benchmarks/: CMakeLists.txt  benchmark_undistort.cpp
notebooks/: demo_drift_trend.ipynb  demo_photometric_stereo.ipynb
